--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotted-map": "^2.2.3",
     "geojson": "^0.5.0",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "lottie-web": "^5.13.0",
     "lucide-react": "^0.544.0",
     "motion": "12.0.0-alpha.2",
